Add initial `Torch.Tensor`, a wrapper for pytorch tensors.

--- a/.github/workflows/library-check.yaml
+++ b/.github/workflows/library-check.yaml
@@ -25,9 +25,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - { os: ubuntu-latest, shell: bash }
-          - { os: macos-latest, shell: bash }
-          - { os: windows-latest, shell: 'wsl-bash {0}' }
+          - { os: ubuntu-latest, shell: bash, deps: sudo apt-get install libtorch-dev }
+          - { os: macos-latest, shell: bash, deps: brew install pytorch }
+          # - { os: windows-latest, shell: 'wsl-bash {0}' }
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -35,6 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: savi-lang/action-install@v1
+      - run: ${{ matrix.deps }}
       - run: savi deps update --for spec
       - run: savi run spec ${{ runner.os == 'Windows' && '--cross-compile=x86_64-unknown-windows-msvc' || '' }}
 
